<resources>
    <string name="app_name">UniApp</string>
    <string name="matricola">Matricola:</string>
    <string name="cognome">Cognome:</string>
    <string name="nome">Nome:</string>
    <string name="crediti">Crediti:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Accedi</string>
    <string name="errore_login">Errore nell\'autenticazione</string>
    <string name="obbligatorio">Campo obbligatorio</string>
</resources>
